[metadata]
name = ffpb
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/ffpb
description = A progress bar for ffmpeg. Yay !
long-description = file: README.rst
license = MIT
platform = any
keywords = ffmpeg, ffmpeg-command, progress-bar, python-script, cli
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Topic :: Multimedia :: Video :: Conversion

[options]
zip_safe = true
include_package_data = false
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
install_requires = progressbar2; sh
setup_require = setuptools
py_modules = ffpb

[options.entry_points]
console_scripts =
  ffpb = ffpb:main

[bdist_wheel]
universal = true
