[metadata]
name = ffpb
version = 0.3.0
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/ffpb
description = A progress bar for ffmpeg. Yay !
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keywords = ffmpeg, ffmpeg-command, progress-bar, python-script, cli
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Multimedia :: Video :: Conversion

[options]
zip_safe = true
include_package_data = false
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
py_modules = ffpb
test_suite = tests
setup_require =
  setuptools >=39.2
install_requires =
  tqdm ~=4.25

[options.entry_points]
console_scripts =
  ffpb = ffpb:main

[bdist_wheel]
universal = true

[aliases]
test = green

[coverage:report]
show_missing = true
exclude_lines =
        pragma: no cover
        @abc.abstractmethod
        @abc.abstractproperty
        raise NotImplementedError
        return NotImplemented

[nosetests]
verbosity = 2
with-coverage = true
cover-xml = true
cover-package = ffpb
with-doctest = true
doctest-extension = .rst
rednose = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
processes = 1

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
match-dir = (?!tests)[^\.].*
